--- a/client/styles/pageLayout.module.css
+++ b/client/styles/pageLayout.module.css
@@ -3,7 +3,7 @@
     margin: 0;
     min-height: 100vh;
     flex-direction: column;
-    background-color: #1b2838;
+    background-color: var(--theme-page-background);
 }
 
 .content {
