--- a/client/styles/topNav.module.css
+++ b/client/styles/topNav.module.css
@@ -1,11 +1,11 @@
 .topNav {
     display: flex;
-    padding: 1.5em;
-    background-color: #171a21;
+    padding: var(--theme-md);
+    background-color: var(--theme-header-background);
 }
 
 .heading {
     text-transform: uppercase;
-    color: white;
-    font-size: 2em;
+    color: var(--theme-page-text);
+    font-size: var(--theme-lg);
 }
