--- a/client/styles/LandingHeader.module.css
+++ b/client/styles/LandingHeader.module.css
@@ -1,15 +1,70 @@
 .main {
     width: 100%;
-    height: 100%;
+    height: 450px;
     display: flex;
     justify-content: center;
 }
-.heading {
+
+.imgBox {
+    z-index: 2;
+    width: 80%;
+    position: relative;
+    background-image: url("public/LandingBackImg.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    justify-content: center;
+    display: flex;
+}
+.transparentBox{
     width: 60%;
+    display: flex;
+    top: 10%;
+    position: absolute;
+    height: 20%;
+    flex-direction: column;
+}
+.grandText{
+    display: flex;
+    border-bottom: #66C0F4 1px solid;
+    padding-bottom: 3px;
+    font-size: large;
+    padding-left: 3px;
+}
+.subText{
+    padding-left: 3px;
+    display: flex;
+    margin-top: 3px;
+    font-size: small;
+}
+.highlightBox{
     background-color: rgba(42, 71, 94, 0.8);
+    width: 60%;
+    height: 30%;
+    position: absolute;
+    bottom: 35%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.gettingStarted{
+    height: 15%;
+    top: 15%;
+    position: absolute;
+    border-bottom: #66C0F4 1px solid;
+    width: 90%;
+    padding-bottom: 2px;
 }
 .alignmentBox {
+    padding-top: 5%;
     display: flex;
-    width: 60%;
+    width: 90%;
+    height: 20%;
     flex-direction: row;
+}
+
+.buttonOne{
+    position: absolute;
+    display: flex;
 }
