--- a/client/styles/button.module.css
+++ b/client/styles/button.module.css
@@ -1,13 +1,20 @@
-.box{
-    background-color: #2F4B67;
-    border: 1px solid #cccccc;
-    border-radius: 4pt;
+.container{
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
+}
+.box{
+    background-color: #2F4B67;
+    border: 1px solid rgba(255, 255, 255, 0.25);
+    border-radius: 4pt;
+    justify-content: center;
     font-weight: 80;
-    width: 50%;
-    height: 100%;
+    width: 90%;
+    height: 160%;
     justify-content: center;
     align-items: center;
     color: white;
+    font-size: x-large;
 }
