Update landing-back-img naming to follow conformity

--- a/client/styles/LandingHeader.module.css
+++ b/client/styles/LandingHeader.module.css
@@ -9,7 +9,7 @@
     z-index: 2;
     width: 80%;
     position: relative;
-    background-image: url("public/LandingBackImg.png");
+    background-image: url("public/landing-back-img.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
