--- a/client/styles/LandingHeader.module.css
+++ b/client/styles/LandingHeader.module.css
@@ -1,5 +1,4 @@
 .landingHeader {
-    width: 100%;
     height: 450px;
     display: flex;
     justify-content: center;
@@ -14,6 +13,7 @@
     background-repeat: no-repeat;
     background-size: contain;
     justify-content: center;
+    align-items: center;
     display: flex;
 }
 .transparentBox{
@@ -21,7 +21,6 @@
     display: flex;
     top: 10%;
     position: absolute;
-    height: 20%;
     flex-direction: column;
 }
 .grandText{
