--- a/client/styles/button.module.css
+++ b/client/styles/button.module.css
@@ -1,22 +1,13 @@
 .container{
-    width: 100%;
-    height: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
 }
 .box{
     background-color: var(--theme-button-background);
     border: 1px solid var(--theme-border);
     border-radius: 4pt;
-    justify-content: center;
-    font-weight: 80;
-    width: 90%;
-    height: 160%;
-    justify-content: center;
-    align-items: center;
     color: var(--theme-page-text);
-    font-size: x-large;
+    font-size: var(--theme-md);
+    padding: var(--theme-xs) var(--theme-lg);
 }
 .box:active{
     background-color: var(--theme-button-hover);
