--- a/client/styles/LandingHeader.module.css
+++ b/client/styles/LandingHeader.module.css
@@ -1,5 +1,4 @@
 .landingHeader {
-    height: 450px;
     display: flex;
     background-image: url("public/landing-back-img.png");
     background-position: center;
@@ -7,12 +6,14 @@
     background-size: cover;
     justify-content: center;
     align-items: center;
+    width: 100vw;
 }
 .transparentBox{
     display: flex;
     flex-direction: column;
-    width: 60%;
+    width: 80%;
     justify-content: space-between;
+    margin: var(--theme-lg);
 }
 .grandText{
     border-bottom: var(--theme-box-accents) 1px solid;
