--- a/client/styles/index.module.css
+++ b/client/styles/index.module.css
@@ -1,4 +1,6 @@
-.headerContainer{
-    width: 100%;
-    height: 100%;
+.displayBlock{
+    display: block;
+}
+.displayNone{
+    display: none;
 }
