Fix UI centering issue

--- a/client/styles/auth.module.css
+++ b/client/styles/auth.module.css
@@ -1,7 +1,7 @@
 .main {
     background-color: var(--theme-box-background);
     padding: var(--theme-md);
-    margin: var(--theme-md)
+    margin: var(--theme-md);
 }
 .topRow {
     display: flex;
