--- a/client/styles/LandingHeader.module.css
+++ b/client/styles/LandingHeader.module.css
@@ -1,5 +1,4 @@
 .landingHeader {
-    height: 450px;
     display: flex;
     background-image: url("public/landing-back-img.png");
     background-position: center;
@@ -7,29 +6,31 @@
     background-size: cover;
     justify-content: center;
     align-items: center;
+    width: 100vw;
 }
-.transparentBox{
+.transparentBox {
     display: flex;
     flex-direction: column;
-    width: 60%;
+    width: 80%;
     justify-content: space-between;
+    margin: var(--theme-lg);
 }
-.grandText{
+.grandText {
     border-bottom: var(--theme-box-accents) 1px solid;
     font-size: var(--theme-md);
     padding-bottom: var(--theme-xs);
     margin-bottom: var(--theme-xs);
 }
-.subText{
+.subText {
     font-size: var(--theme-sm);
     padding-bottom: var(--theme-lg);
 }
 
-.highlightBox{
+.highlightBox {
     background-color: var(--theme-box-background);
     padding: var(--theme-md)
 }
-.gettingStarted{
+.gettingStarted {
     border-bottom: var(--theme-box-accents) 1px solid;
     font-size: var(--theme-md);
     margin-bottom: var(--theme-sm);
