--- a/client/styles/pageLayout.module.css
+++ b/client/styles/pageLayout.module.css
@@ -1,6 +1,5 @@
 .layout {
     display: flex;
-    margin: 0;
     min-height: 100vh;
     flex-direction: column;
     background-color: var(--theme-page-background);
@@ -9,4 +8,6 @@
 .content {
     display: flex;
     flex: 1;
+    align-items: center;
+    justify-content: center;
 }
