--- a/client/src/styles/PageLayout.module.css
+++ b/client/src/styles/PageLayout.module.css
@@ -1,12 +1,13 @@
 .layout {
     display: flex;
-    min-height: 100vh;
+    height: 100%;
     flex-direction: column;
     background-color: var(--theme-page-background);
 }
 
 .content {
     display: flex;
+    flex-direction: column;
     flex: 1;
     align-items: center;
     justify-content: center;
