--- a/client/src/styles/index.module.css
+++ b/client/src/styles/index.module.css
@@ -6,7 +6,7 @@
     background-size: cover;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 100vw;
     flex: 1;
 }
 .transparentBox {
