Accordian working, styling required

--- a/client/src/styles/index.module.css
+++ b/client/src/styles/index.module.css
@@ -1,3 +1,8 @@
+.pageContainer {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
 .landingHeader {
     display: flex;
     background-image: url("../assets/landing-back-img.png");
