--- a/client/src/styles/Button.module.css
+++ b/client/src/styles/Button.module.css
@@ -1,12 +1,12 @@
 .button {
-    align-self: start;
     background-color: var(--theme-button-background);
     border-radius: 0.4rem;
     border: var(--theme-border) 1px solid;
     color: var(--theme-page-text);
     font-family: var(--theme-base-font-family);
     font-size: var(--theme-base-font-size);
-    padding: 0.5em 1em;
+    padding: 0 1em;
+    height: 3.6rem;
 }
 
 .button:hover {
@@ -19,8 +19,10 @@
 .small {
     composes: button;
     font-size: 1rem;
+    height: 2.4rem;
 }
 .large {
     composes: button;
     font-size: 2rem;
+    height: 4.8rem;
 }
