--- a/client/src/styles/index.module.css
+++ b/client/src/styles/index.module.css
@@ -1,5 +1,6 @@
 .pageContainer {
     height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -11,7 +12,6 @@
     background-size: cover;
     justify-content: center;
     align-items: center;
-    width: 100vw;
     flex: 1;
 }
 .transparentBox {
