--- a/client/src/styles/FAQ.module.css
+++ b/client/src/styles/FAQ.module.css
@@ -4,8 +4,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-end;
-    padding-top: var(--theme-sm);
 }
 
 .chevron {
@@ -24,19 +22,20 @@
     color: var(--theme-page-text);
     width: 80%;
     font-size: 18px;
-    transition: max-height 0.6s ease;
-    max-height: 100%
+    transform: scaleY(1);
+    transform-origin: top;
+    transition:transform 0.3s ease;
 }
 
 .contentContainerHide {
     color: var(--theme-page-text);
     width: 80%;
     font-size: 18px;
-    transition: max-height 0.6s ease;
-    max-height: 0px;
+    transform: scaleY(0) ;
+    transform-origin: top;
+    transition: transform 0.3s ease;
 }
 .header {
     font-size: 24px;
     border-bottom: solid 1px var(--theme-title-text);
-
 }
