--- a/client/src/styles/Button.module.css
+++ b/client/src/styles/Button.module.css
@@ -1,15 +1,28 @@
 .button {
     background-color: var(--theme-button-background);
+    border-radius: 0.4rem;
     border: var(--theme-border) 1px solid;
-    border-radius: 4pt;
     color: var(--theme-page-text);
-    font-size: var(--theme-md);
-    padding: var(--theme-xs);
-    margin: var(--theme-xs);
+    font-family: var(--theme-base-font-family);
+    font-size: var(--theme-base-font-size);
+    padding: 0 1em;
+    height: 3.6rem;
 }
+
 .button:hover {
-    background-color: var(--theme-button-hover);
+    background-color: var(--theme-button-background-hover);
 }
 .button:active {
-    background-color: var(--theme-button-active);
+    background-color: var(--theme-button-background-active);
+}
+
+.small {
+    composes: button;
+    font-size: 1rem;
+    height: 2.4rem;
+}
+.large {
+    composes: button;
+    font-size: 2rem;
+    height: 4.8rem;
 }
