--- a/client/src/styles/hostSetup.module.css
+++ b/client/src/styles/hostSetup.module.css
@@ -1,5 +1,26 @@
 .main {
-    width: 70%;
-    height: 50%;
     background-color: var(--theme-box-background);
+    padding: var(--theme-md);
+}
+.title {
+    border-bottom: var(--theme-title-text) solid 1px;
+    margin-bottom: var(--theme-md);
+    padding-bottom: var(--theme-xs);
+    font-size: 18pt
+}
+.grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: var(--theme-sm) var(--theme-md);
+    align-items: end;
+}
+.padding {
+    padding-bottom: var(--theme-xs);
+}
+.enableAuth {
+    border: 1px solid var(--theme-border);
+    border-radius: 0.5rem;
+    padding: var(--theme-xs);
+    display: flex;
+    flex-direction: column;
 }
