set fixed height

--- a/client/src/styles/Textbox.module.css
+++ b/client/src/styles/Textbox.module.css
@@ -2,7 +2,7 @@
     background-color: var(--theme-textbox-background);
     border: 1px solid var(--theme-border);
     color: var(--theme-textbox-text);
-    height: var(--theme-md);
+    height: 22px;
     border-radius: 0.5rem;
     outline: none;
     resize: none;
