--- a/client/src/styles/widgets/Select.module.css
+++ b/client/src/styles/widgets/Select.module.css
@@ -21,13 +21,13 @@
 
 .small {
     composes: select;
-    --theme-md-icon-size: 18px;
+    --theme-md-icon-size: var(--theme-md-icon-xs);
     font-size: 1rem;
     height: 2.4rem;
 }
 .large {
     composes: select;
-    --theme-md-icon-size: 36px;
+    --theme-md-icon-size: var(--theme-md-icon-md);
     font-size: 2rem;
     height: 4.8rem;
 }
