--- a/client/src/styles/widgets/widgets.module.css
+++ b/client/src/styles/widgets/widgets.module.css
@@ -1,5 +1,18 @@
+.focus,
+.focusWithin {
+    /* composition rule */
+}
+.focus:focus,
+.focusWithin:focus-within {
+    box-shadow: 0 0 0 0.2rem var(--theme-widget-focus);
+    outline: none;
+}
+.focusWithin *:focus {
+    outline: none;
+}
+
 .icon {
-    /* Empty rule for composition */
+    /* composition rule */
 }
 .icon::before,
 .icon::after {
