Prevent checkbox shrinking

--- a/client/src/styles/widgets/Checkbox.module.css
+++ b/client/src/styles/widgets/Checkbox.module.css
@@ -28,6 +28,7 @@
     border: 1px solid var(--theme-border);
     border-radius: 0.2rem;
     display: flex;
+    flex-shrink: 0;
     font-size: inherit;
     height: var(--size);
     justify-content: center;
