--- a/client/src/styles/widgets/Checkbox.module.css
+++ b/client/src/styles/widgets/Checkbox.module.css
@@ -1,4 +1,5 @@
 .checkboxContainer {
+    --size: 2.4rem;
     align-items: center;
     display: inline-flex;
     font-family: var(--theme-base-font-family);
@@ -6,27 +7,38 @@
     user-select: none;
 }
 
+.small {
+    composes: checkboxContainer;
+    --theme-md-icon-size: var(--theme-md-icon-xs);
+    --size: 1.6rem;
+    font-size: 1rem;
+}
+.large {
+    composes: checkboxContainer;
+    --theme-md-icon-size: var(--theme-md-icon-md);
+    --size: 3.6rem;
+    font-size: 2rem;
+}
+
 .checkbox {
+    composes: icon from "./widgets.module.css";
     align-items: center;
     appearance: none;
     background-color: var(--theme-widget-background);
     border: 1px solid var(--theme-border);
     border-radius: 0.2rem;
     display: flex;
+    flex-shrink: 0;
     font-size: inherit;
-    height: 2rem;
+    height: var(--size);
     justify-content: center;
     margin: initial;
     margin-right: 0.5em;
     position: relative;
-    width: 2rem;
+    width: var(--size);
 }
 
 .checkbox:checked::after {
-    background-color: currentColor;
-    content: "";
-    height: 1.2rem;
-    opacity: 0.75;
-    position: absolute;
-    width: 1.2rem;
+    content: "\e5ca";
+    transform: scale(0.8);
 }
