--- a/client/src/styles/index.module.css
+++ b/client/src/styles/index.module.css
@@ -25,6 +25,7 @@
     flex-direction: column;
     align-items: center;
     padding: var(--theme-lg);
+    overflow: overlay
 }
 .tagline {
     border-bottom: var(--theme-box-accents) 1px solid;
@@ -43,4 +44,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+.text {
+    padding: var(--theme-md);
+    font-weight: bold;
 }
