--- a/client/src/styles/index.module.css
+++ b/client/src/styles/index.module.css
@@ -25,7 +25,7 @@
     flex-direction: column;
     align-items: center;
     padding: var(--theme-lg);
-    overflow: overlay
+    overflow: auto;
 }
 .tagline {
     border-bottom: var(--theme-box-accents) 1px solid;
