--- a/client/src/styles/index.module.css
+++ b/client/src/styles/index.module.css
@@ -1,48 +1,51 @@
 .pageContainer {
+    background-color:rgba(0, 0, 0, 0.25);
+    z-index: 0;
     height: 100%;
     width: 100%;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
 }
-.landingHeader {
+.rearBox {
+    background-color: #1B2838;
+    z-index: 1;
+    height: 75vh;
+    width: 60vw;
+    transform: translate(20%);
+}
+.middleBox {
+    background-color:#2A475ECC;
+    margin: var(--theme-lg);
+    z-index: 2;
+    height: 50vh;
+    width: 40vw;
+    position: absolute;
+    transform: translate(-70%, 0);
     display: flex;
-    background-image: url("../assets/landing-back-img.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    flex-direction: column;
+    align-items: center;
+    padding: var(--theme-lg);
+    overflow: auto;
+}
+.tagline {
+    border-bottom: var(--theme-box-accents) 1px solid;
+    margin-bottom: var(--theme-md);
+    width: 100%;
+}
+.frontBox {
+    background-color: #2A475E;
+    margin: var(--theme-lg);
+    z-index: 3;
+    height: 30vh;
+    width: 40vw;
+    position: absolute;
+    transform: translate(40%);
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex: 1;
 }
-.transparentBox {
-    display: flex;
-    flex-direction: column;
-    width: 80%;
-    justify-content: space-between;
-    margin: var(--theme-lg);
-}
-.grandText {
-    border-bottom: var(--theme-box-accents) 1px solid;
-    font-size: var(--theme-md);
-    padding-bottom: var(--theme-xs);
-    margin-bottom: var(--theme-xs);
-}
-.subText {
-    font-size: var(--theme-sm);
-    padding-bottom: var(--theme-lg);
-}
-
-.highlightBox {
-    background-color: var(--theme-box-background);
+.text {
     padding: var(--theme-md);
-}
-.gettingStarted {
-    border-bottom: var(--theme-box-accents) 1px solid;
-    font-size: var(--theme-md);
-    margin-bottom: var(--theme-sm);
-}
-.alignmentBox {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    font-weight: bold;
 }
