--- a/client/src/styles/FriendBar.module.css
+++ b/client/src/styles/FriendBar.module.css
@@ -1,7 +1,15 @@
-.component{
+.selected{
     width: 100%;
-    background-color: #2A475E;
-    margin-bottom: var(--theme-md);
+    background-color: var(--theme-friendbar-selected);
+    padding: var(--theme-xs);
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.unselected{
+    width: 100%;
+    background-color: var(--theme-friendbar-unselected);
     padding: var(--theme-xs);
     border-radius: 5px;
     display: flex;
