--- a/client/src/styles/FriendBar.module.css
+++ b/client/src/styles/FriendBar.module.css
@@ -7,7 +7,8 @@
     justify-content: space-between;
     align-items: center;
     border: none;
-    margin-bottom: var(--theme-sm)
+    margin-bottom: var(--theme-sm);
+    color: var(--theme-page-text);
 }
 .unselected{
     composes: selected;
