--- a/client2/src/app.css
+++ b/client2/src/app.css
@@ -25,6 +25,7 @@
     --theme-widget-background-hover: #224e7a;
     --theme-widget-background-active: #1898d0;
     --theme-widget-focus: #00b3ff77;
+    --theme-widget-focus-shadow: 0 0 0 0.2rem var(--theme-widget-focus);
     --theme-widget-text: var(--theme-page-text);
 
     --system-font-stack: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -36,11 +37,13 @@
     --theme-base-font-size: 1.5rem;
 
     /* Material icons sizing */
-    --theme-md-icon-size: var(--theme-md-icon-sm);
-    --theme-md-icon-xs: 18px;
-    --theme-md-icon-sm: 24px;
-    --theme-md-icon-md: 36px;
-    --theme-md-icon-lg: 48px;
+    --theme-md-icon-size: var(--theme-md-icon-md);
+    --theme-md-icon-xs: 8px;
+    --theme-md-icon-sm: 12px;
+    --theme-md-icon-md: 15px;
+    --theme-md-icon-lg: 18px;
+    --theme-md-icon-xlg: 24px;
+    --theme-md-icon-xxlg: 36px;
 
     --theme-font-size-sm: 1.2rem;
     --theme-font-size-md: 1.5rem;
@@ -107,6 +110,10 @@ input[type="text"] {
     padding: 0 var(--theme-spacing-md);
     width: 100%;
 }
+input[type="text"]:focus {
+    box-shadow: var(--theme-widget-focus-shadow);
+    outline: none;
+}
 
 .box {
     background-color: var(--theme-box-background);
@@ -122,23 +129,8 @@ input[type="text"] {
     width: max-content;
 }
 
-.material-icons-pseudo::before,
-.material-icons-pseudo::after {
-    font-family: "Material Icons Round";
-    font-weight: normal;
-    font-style: normal;
-    font-size: var(--theme-md-icon-size);
-    line-height: 1;
-    letter-spacing: normal;
-    text-transform: none;
-    display: inline-block;
-    white-space: nowrap;
-    word-wrap: normal;
-    direction: ltr;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    text-rendering: optimizeLegibility;
-    font-feature-settings: "liga";
+.bi {
+    font-size: var(--theme-md-icon-size) !important;
 }
 
 /* Text classes */
