--- a/client2/src/app.css
+++ b/client2/src/app.css
@@ -49,7 +49,8 @@
     --theme-font-size-md: 1.5rem;
     --theme-font-size-lg: 1.8rem;
     --theme-font-size-xlg: 2.4rem;
-    --theme-font-size-xxlg: 3.6rem;
+    --theme-font-size-xxlg: 3.2rem;
+    --theme-font-size-xxxlg: 3.6rem;
 
     --theme-spacing-sm: 0.4rem;
     --theme-spacing-md: 0.8rem;
